<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:paddingTop="?android:attr/actionBarSize">

    <LinearLayout
        android:id="@+id/loginFieldsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/logoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayoutPlaceholder1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/imageViewSplashLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ImageContentDescription"
                android:src="@drawable/splash_logo" />


            <LinearLayout
                android:id="@+id/linearLayoutPlaceholder2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/callButton"
                style="@style/custom_button"
                android:layout_width="match_parent"
                android:text="@string/call_for_support" />

            <Button
                android:id="@+id/emailButton"
                style="@style/custom_button"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/email_for_support" />


        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/versionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="12sp"
        />
</RelativeLayout>